# mc856

./: .gitignore  .testing_pypi_simple.py.swp  README.md  create_dataset.py  dataset.py  pyproject.toml  reversed_graph_sub_edges.csv  trying_to_create_a_great_graph.py
.github/workflows/: crown.yaml
dataset/: dataset.py
dataset_2/pypi_data_downloader/: cli.py
graph_analysis/: analysis.ipynb  compute_metrics.py  create_dataset.py  graph_builder.py
graph_analysis/metrics/: abstract_metrics.py  centralities.py  clustering_coefficient.py  degrees.py  longest_path.py  nodes_and_edges.py  number_of_reachable_packages.py  number_of_vul_per_packages.py  packages_reached_by_vuln.py  pagerank.py  percentage_of_the_network_reached_by_set.py
release_data/: serials.json
release_data/0/: 0.0.1.json  0.618.json  0.67.0.json  0.json
release_data/1/: 1.json
release_data/2/: 2.5d.json
release_data/3/: 3.json
release_data/5/: 5.json
release_data/6/: 6.json
release_data/7/: 7.json
release_data/8/: 8.json
release_data/9/: 9.json
release_data/a/: a.i.json  a.json
release_data/b/: b.a.json  b.json  b.py.json
release_data/c/: c.json
release_data/d/: d.json
release_data/e/: e.calc.json  e.json  e.pdfminer.six.json  e.s.p.-hadouken.json
release_data/f/: f.json
release_data/g/: g.json
release_data/h/: h.json  h.py.json
release_data/i/: i.json
release_data/j/: j.json  j.osh.json
release_data/k/: k.json
release_data/l/: l.json
release_data/m/: m.json
release_data/n/: n.json
release_data/o/: o.json
release_data/p/: p.e.t-build.json  p.json  (+1 more)
(+566352 files in other folders)
